# todos-layerd

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: handlers.rs  main.rs  repositories.rs
todos-adapter/: Cargo.toml
todos-adapter/src/repository/: health.rs  mod.rs  todo.rs
todos-app/: Cargo.toml
todos-app/src/usecase/: health.rs  todo.rs
todos-controller/: Cargo.toml
todos-controller/src/: lib.rs  main.rs
todos-controller/src/handler/: todo.rs
todos-controller/src/module/: mod.rs
todos-controller/src/setup/: mod.rs
todos-domain/: Cargo.toml
todos-domain/src/model/: todo.rs
todos-domain/src/repository/: todo.rs
todos-infra/: Cargo.toml
todos-infra/src/model/: todo.rs
todos-service/: Cargo.toml
todos-service/src/usecase/: todo.rs
