[package]
name = "todos-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todos-infra = { path = "../todos-infra" }
anyhow = "1.0.78"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.53"
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.77"
